--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
     "lucide-vue-next": "^0.542.0",
+    "maska": "^3.2.0",
     "nookies": "^2.5.2",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
